# sre-opspilot

./: .env.example  .gitignore  JUDGE_PATH.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/opspilot/: dashboard.py  evidence_collection.py  investigation.py  llm_provider.py  model_selection.py  postmortem.py  recovery.py  remediation.py  settings.py  simulation.py
backend/opspilot/adapters/: __init__.py  kubernetes.py  prometheus.py
backend/opspilot/api/: main.py
backend/opspilot/domain/: __init__.py  actions.py  alerts.py  evidence.py  incidents.py  investigation.py  tools.py
backend/opspilot/storage/: __init__.py  incidents.py
demo/checkout/: Dockerfile  app.py  requirements.txt
docs/: ARCHITECTURE.md  CLAIM_VERIFICATION.md  DELIVERY_PLAN.md  PROGRESS.md  USER_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  styles.css
infra/k8s/: checkout.yaml  load-generator.yaml  namespace.yaml  prometheus.yaml
infra/kind/: config.yaml
scripts/: demo-proof.ps1  eval.ps1  model-smoke.ps1  package-judge.ps1  prepare-demo.ps1  run-console.ps1  run-judge.ps1  scenario.ps1  send-p1-alert.ps1  test-e2e-p1-remediation.ps1  test-e2e-p1.ps1  test-e2e-p2-remediation.ps1  test-e2e-p2.ps1  verify.ps1
tests/: conftest.py  e2e_p1_kind.py  e2e_p1_remediation.py  e2e_p2_remediation.py  test_alert_ingress.py  test_investigation.py  test_policy_contracts.py  test_simulation.py
